tests/fixtures/positive/naming/FunctionNameMinLength.kt
package naming

fun ab() {
    println("too short")
}
