tests/fixtures/negative/naming/FunctionNameMaxLength.kt
package naming

fun shortFunctionName() {
    println("ok")
}
